--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
+    "@nuxt/content": "^1.14.0",
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/style-resources": "^1.2.1",
